# hindsight

./: .ycm_extra_conf.py  CMakeLists.txt  Makefile  core  log4cxx.xml  norm.txt  norm_u2k_5000.txt  susp.txt  suspicious.txt  symmi_300.txt
configs/: load_eval.hpp  nul_config.cfg  nul_config.cfg.status
src/: CMakeLists.txt  appinfo.h  appinfo.h.in.cmake  main.cpp  sth.hpp
src/hisi/: config.hpp  hindisght.hpp  start.cpp  start.cpp_old  start.hpp
src/hisi/core/eval/: EvaluatorWrapper.hpp  LengthEvaluator.hpp  MatchConverter.hpp  MatchEvaluator.hpp  RewardAndPenaltyConverter.hpp  SSPNMatchConverter.cpp  SSPNMatchConverter.hpp  SignatureEvaluator.hpp  multiple_criteria_evaluation.hpp
src/hisi/core/match/: GlobalMatchAlgo.hpp  MatchResult.cpp  MatchResult.hpp  MatchingState.hpp  PositionIndex.cpp  PositionIndex.hpp
src/hisi/core/pos/: PCChecker.hpp  PositionConstraint.hpp  PositionRuleFunc.hpp  SingleRule.hpp  position_policies.hpp  position_rules.hpp  rule.hpp
src/hisi/core/tools/: AcceptAllFlowFilter.hpp  FlowCategory.hpp  FlowFilter.hpp  TokenPool.hpp
src/hisi/load/: DataInfo.hpp  Loader.hpp  LoadingErrorException.hpp  load_cross.hpp  load_eval.hpp  load_init.hpp  load_match.hpp  load_mut.hpp  load_op.hpp
src/hisi/make/: Configuration.hpp  InputParamError.hpp  configure.hpp  make_config.hpp  make_data.cpp  make_data.hpp  make_help.hpp  make_tokens.hpp  param_config.hpp
src/hisi/utils/: constant.hpp  gamath.hpp  misc.hpp  printer.hpp  sig_gen.cpp  sig_gen.hpp  tuple_func.hpp
test/: CMakeLists.txt  rules_check.cpp  sanity_check.cpp  test.cpp
(+20 files in other folders)
